# green-ledger

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260401_0001_baseline.py
apps/api/src/greenledger_api/: main.py
apps/api/src/greenledger_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/greenledger_api/api/: __init__.py  app.py
apps/api/src/greenledger_api/api/routes/: __init__.py  health.py
apps/api/src/greenledger_api/config/: __init__.py  settings.py
apps/api/src/greenledger_api/db/: __init__.py  engine.py  session.py
apps/api/src/greenledger_api/orchestration/: __init__.py  graph.py
apps/api/tests/: conftest.py  test_health.py  test_settings.py
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/app/(app)/reports/: page.tsx
apps/web/app/(app)/reports/[id]/: layout.tsx  page.tsx  report-context.ts
apps/web/app/(app)/reports/[id]/evidence/: page.tsx
apps/web/app/(app)/reports/[id]/exports/: page.tsx
apps/web/app/(app)/reports/[id]/framework/: page.tsx
apps/web/app/(app)/reports/new/: page.tsx
apps/web/app/(app)/workspaces/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: app-shell.module.css  app-shell.tsx  canvas.tsx  info-card.tsx  segmented-tabs.tsx  sidebar.tsx
apps/web/lib/: config.ts  contracts.ts  health.ts  mock-data.ts
(+4 files in other folders)
